Attemp to fix login not showing on mobile

--- a/style.css
+++ b/style.css
@@ -491,7 +491,6 @@ footer{
         align-items: center;
         justify-content: space-between;
         padding: 0 1rem;
-        z-index: 1000;
 
     }
 
@@ -521,7 +520,6 @@ footer{
         justify-content: space-around;
         align-items: center;
         background: var(--sidebar-color, #2d2d2d);
-        z-index: 1000;
     }
 
    .sidebar-item {
